# web2_hw7

./: config.ini  my_select.py  pyproject.toml  seed.py  sqlalchemy_example.db  test.py
alembic/: env.py
alembic/versions/: b73f03771aa2_init.py
database/: db.py  models.py
seeds/: disciplines.py  grades.py  groups.py  students.py  teachers.py
